final readme update